# traffic-monitor

./: CMakeLists.txt  README.md  plan.md
include/: AppConfig.hpp  BackgroundSubtractor.hpp  Blob.h  Blob.hpp  CMakeLists.txt  Tracker.hpp  Transform.h  Transform.hpp
src/: AppConfig.cpp  BackgroundSubstractor.cpp  Blob.cpp  CMakeLists.txt  Tracker.cpp  Transform.cpp  main.cpp
tests/: CMakeLists.txt
tests/background_subtractor/: BackgroundSubtractorTest.cpp  CMakeLists.txt
tests/blob/: BlobTest.cpp  CMakeLists.txt  main.cpp
tests/tracker/: CMakeLists.txt  TrackerTest.cpp
tests/transform/: CMakeLists.txt
